crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test__adding_check_constraint_err.snap
---
source: crates/squawk_linter/src/rules/constraint_missing_not_valid.rs
expression: "lint_errors_with(sql, LinterSettings\n{ assume_in_transaction: true, ..Default::default() },)"
---
error[ConstraintMissingNotValid]: By default new constraints require a table scan and block writes to the table while that scan occurs.
  ╭▸ 
3 │ ALTER TABLE "accounts" ADD CONSTRAINT "positive_balance" CHECK ("balance" >= 0);
  │                        ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ╰ help: Use `NOT VALID` with a later `VALIDATE CONSTRAINT` call.
