crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test__adding_fk_err.snap
---
source: crates/squawk_linter/src/rules/constraint_missing_not_valid.rs
expression: errors
---
[
    Violation {
        code: ConstraintMissingNotValid,
        message: "By default new constraints require a table scan and block writes to the table while that scan occurs.",
        text_range: 40..114,
        messages: [],
    },
]
