crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test__not_valid_validate_assume_transaction_err.snap
---
source: crates/squawk_linter/src/rules/constraint_missing_not_valid.rs
expression: "lint_errors_with(sql, LinterSettings\n{ assume_in_transaction: true, ..Default::default() },)"
---
warning[constraint-missing-not-valid]: Using `NOT VALID` and `VALIDATE CONSTRAINT` in the same transaction will block all reads while the constraint is validated.
  ╭▸ 
3 │ ALTER TABLE "app_email" VALIDATE CONSTRAINT "fk_user";
  │                         ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  │
  ╰ help: Add constraint as `NOT VALID` in one transaction and `VALIDATE CONSTRAINT` in a separate transaction.
