crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__constraint_missing_not_valid__test__not_valid_validate_transaction_err.snap
---
source: crates/squawk_linter/src/rules/constraint_missing_not_valid.rs
expression: errors
---
[
    Violation {
        code: ConstraintMissingNotValid,
        message: "Using NOT VALID and VALIDATE CONSTRAINT in the same transaction will block all reads while the constraint is validated.",
        text_range: 141..170,
        messages: [
            "Add constraint as NOT VALID in one transaction and VALIDATE CONSTRAINT in a separate transaction.",
        ],
    },
]
